@@ -1,3 +1,4 @@
+* Allow to customize the substitutions used on sequence
 * Allow PYSON in tree_invisible attribute
 
 Version 4.0.0 - 2016-05-02
